@@ -1,3 +1,9 @@
+Sun Mar 20 11:54:44 EST 2005
+
+	Hex edit mode
+
+	Do not CD from names on command line
+
 Sat Mar 19 17:08:05 EST 2005
 
 	Fix != in math prompt
